NEW: Add new route to get all accounts
